# roughtex

./: CMakeLists.txt  README.md
paper/: Option.txt
src/: main.cpp  replacer.cpp  replacer.h  string_reader.h  test_using_acutest.cpp
test/: replacer.test.cpp  string_reader.test.cpp  test_using_acutest.test.cpp
